--- a/trainers.cfg
+++ b/trainers.cfg
@@ -1,4 +1,5 @@
 Master Bodrus	Your body feels stronger.
+Eva	You seem to heal more effectively.
 Corpus	Dein Körper fühlt sich etwas stärker an.
 Claro	Deine geistigen Fähigkeiten scheinen sich erweitert zu haben.
 Esprit	Deine geistige Ausdauer hat sich verbessert.
