Add Bruia Stout

--- a/trainers.cfg
+++ b/trainers.cfg
@@ -1,3 +1,4 @@
+Bruia Stout	You feel more skilled in the art of brewing.
 Master Bodrus	Your body feels stronger.
 Skea Brightfur	Your study of skinning seems to be paying off.
 Eva	You seem to heal more effectively.
