Add Babelle Lyrn (Sylvan language)

--- a/trainers.cfg
+++ b/trainers.cfg
@@ -1,3 +1,4 @@
+Babelle Lyrn	You feel closer to understanding the Sylvan language.
 Bruia Stout	You feel more skilled in the art of brewing.
 Master Bodrus	Your body feels stronger.
 Skea Brightfur	Your study of skinning seems to be paying off.
