--- a/trainers.cfg
+++ b/trainers.cfg
@@ -3,6 +3,7 @@ Bruia Stout	You feel more skilled in the art of brewing.
 Master Bodrus	Your body feels stronger.
 Skea Brightfur	Your study of skinning seems to be paying off.
 Eva	You seem to heal more effectively.
+Faustus	You notice yourself healing others faster.
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
 
