Add Higgrus and Sprite dummy messages

--- a/trainers.cfg
+++ b/trainers.cfg
@@ -4,8 +4,10 @@ Master Bodrus	Your body feels stronger.
 Skea Brightfur	Your study of skinning seems to be paying off.
 Eva	You seem to heal more effectively.
 Faustus	You notice yourself healing others faster.
+Higgrus	-
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
+Sprite	-
 
 10	It is good to see you.
 20	Your persistence is paying off.
