--- a/trainers.cfg
+++ b/trainers.cfg
@@ -8,6 +8,7 @@ Higgrus	-
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
 Sprite	-
+Swengus	You notice your balance and recovery improving.
 
 10	It is good to see you.
 20	Your persistence is paying off.
