--- a/trainers.cfg
+++ b/trainers.cfg
@@ -8,6 +8,7 @@ Higgrus	-
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
 Sprite	-
+Sylphia	You understand the walking self-heal technique better.
 Evus	You seem to fight more effectively now.
 Swengus	You notice your balance and recovery improving.
 
