--- a/trainers.cfg
+++ b/trainers.cfg
@@ -5,6 +5,7 @@ Skea Brightfur	Your study of skinning seems to be paying off.
 Eva	You seem to heal more effectively.
 Faustus	You notice yourself healing others faster.
 Higgrus	-
+Horus	You seem to heal people closer to death now.
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
 Sprite	-
