--- a/trainers.cfg
+++ b/trainers.cfg
@@ -9,8 +9,14 @@ Horus	You seem to heal people closer to death now.
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
 Sprite	-
-Sylphia	You understand the walking self-heal technique better.
+Sylpha	You understand the walking self-heal technique better.
+Atkus	You seem to attack more precisely now.
+Balthus	-
+Darkus	-
+Detha	-
 Evus	You seem to fight more effectively now.
+Histia	-
+Regia	You notice your balance recovering more quickly.
 Swengus	You notice your balance and recovery improving.
 
 10	It is good to see you.
