Add some more training progress messages

--- a/trainers.cfg
+++ b/trainers.cfg
@@ -27,3 +27,9 @@ Swengus	You notice your balance and recovery improving.
 100	You keep me on my toes.
 150	It is hard to find more to teach you.
 200	Teaching you is a challenge.
+250	There is not much more I can teach you.
+300	Teaching you has taught me much.
+350	You have attained tremendous skill.
+400	We are nearly equals.
+450	You may be proud of your accomplishment.
+500	You are becoming a master of our art.
