Add Awaria, Detha, Poly Carver and Forgus

--- a/trainers.cfg
+++ b/trainers.cfg
@@ -2,6 +2,7 @@ Babelle Lyrn	You feel closer to understanding the Sylvan language.
 Bruia Stout	You feel more skilled in the art of brewing.
 Master Bodrus	Your body feels stronger.
 Skea Brightfur	Your study of skinning seems to be paying off.
+Awaria	You seem to heal yourself more easily with the moonstone.
 Eva	You seem to heal more effectively.
 Faustus	You notice yourself healing others faster.
 Higgrus	-
@@ -13,11 +14,13 @@ Sylpha	You understand the walking self-heal technique better.
 Atkus	You seem to attack more precisely now.
 Balthus	-
 Darkus	-
-Detha	-
+Detha	You seem to be defending yourself better.
 Evus	You seem to fight more effectively now.
 Histia	-
 Regia	You notice your balance recovering more quickly.
 Swengus	You notice your balance and recovery improving.
+Poly Carver	You feel more skilled in the craft of woodworking.
+Forgus	Your knowledge of blacksmithing improves.
 
 10	It is good to see you.
 20	Your persistence is paying off.
