--- a/trainers.cfg
+++ b/trainers.cfg
@@ -7,9 +7,10 @@ Eva	You seem to heal more effectively.
 Faustus	You notice yourself healing others faster.
 Higgrus	-
 Horus	You seem to heal people closer to death now.
+Proximus	You seem to heal from further away now.
 Respia	You seem to recover spiritual energy faster.
 Sespus	You notice that you can use your healing ability longer.
-Sprite	-
+Sprite	Your healing spirit improves.
 Sylpha	You understand the walking self-heal technique better.
 Atkus	You seem to attack more precisely now.
 Balthus	-
