Change config to yaml

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS= foreign
 bin_PROGRAMS= atlp
 atlp_SOURCES= main.cpp ARankCounter.h ARankCounter.cpp ATextLogCollection.h ATextLogCollection.cpp ALogLineProcessor.h ALogLineProcessor.cpp
-LIBS= -lpcre -lpcrecpp 
+LIBS= -lpcre -lpcrecpp -lyaml-cpp
