--- a/trainers.yaml
+++ b/trainers.yaml
@@ -66,7 +66,7 @@ trainers:
     class: Fighter
     isCombinationTrainer: yes
   - name: Histia
-    message: ""
+    message: You seem to be able to take more damage now.
     class: Fighter
   - name: Regia
     message: You notice your balance recovering more quickly.
